@@ -7,6 +7,7 @@
 #include <rpmio.h>
 #include <rpmcb.h>		/* XXX fnpyKey */
 #include <rpmlib.h>
+#include <yarn.h>
 
 #define	_RPMPS_INTERNAL
 #include "rpmps.h"
